--- a/content/W14 - 國旗.html
+++ b/content/W14 - 國旗.html
@@ -150,6 +150,7 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content">W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W15 - 亂數分組.html'>Next</a> >> W15 - 亂數分組<br /><h1>W14 - 國旗</h1>
+<p><img alt="" height="198" src="./../images/擷取.PNG" width="299"/></p>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823228&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
@@ -185,8 +186,7 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="getFlutter('flutter0')">Flutter0</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button> <button onclick="getFlutter('flutter4')">Flutter4</button> <button onclick="getFlutter('flutter_counter')">Flutter Counter</button> <button onclick="getFlutter('flutter_roc')">ROC Flag</button> <button onclick="getFlutter('flutter_mine1')">踩地雷 1</button> <button onclick="getFlutter('flutter_mine2')">踩地雷 2</button> <button onclick="getFlutter('flutter_mine3')">踩地雷 3</button> <button onclick="getFlutter('flutter_mine4')">踩地雷 4</button> <button onclick="getFlutter('flutter_dropdown')">Dropdown</button> <button onclick="getFlutter('flutter_multiselect')">Multiselect</button> <button onclick="getFlutter('flutter_search')">Search</button> <button onclick="getFlutter('flutter_login')">Login</button> <button onclick="getFlutter('flutter_temp')">溫度轉換</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/temp1&amp;theme=dark" width="800"></iframe></p>
-<br />W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W15 - 亂數分組.html'>Next</a> >> W15 - 亂數分組</div>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/temp1&amp;theme=dark" width="800"></iframe></p><br />W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W15 - 亂數分組.html'>Next</a> >> W15 - 亂數分組</div>
         
     <!-- footer -->
       <div class="container">
