--- a/content/W16 - 查驗考試.html
+++ b/content/W16 - 查驗考試.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a><li><a href='W15 - 亂數分組.html'>W15 - 亂數分組</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a><li><a href='W16 - 查驗考試.html'>W16 - 查驗考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,47 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <br /><h1>W15 - 亂數分組</h1>
-<p>亂數分組:</p>
-<p>學員名單 URL: <input id="studListUrl" size="50" type="text" value="https://mde.tw/cp2019/downloads/2019fall_cp_1b_list.txt"/><br/> 每組人數: <input id="grpNum" size="3" type="text" value="10"/><br/> <input id="submit" type="submit" value="開始分組"/><br/> <label id="output"></label></p><br />W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> </div>
+    <div id="tipue_search_content">W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <br /><h1>W16 - 查驗考試</h1>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<!-- 取 Dart 程式的按鈕 -->
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getDart('function')">Function</button> <button onclick="getDart('fun_parameter')">Function Parameter</button> <button onclick="getDart('fat_arrow')">Fat Arrow</button> <button onclick="getDart('cf')">temperature</button> <button onclick="getHtmlDart('html_tetris')">Tetris</button> <button onclick="getDart('temp1')">Temp1</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('random_grouping')">亂數分組</button> <button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('usaflag')">USA Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button> <button onclick="getHtmlDart('temp2')">Temp2</button></p>
+<h4>Flutter 程式</h4>
+<p><button onclick="getFlutter('flutter0')">Flutter0</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button> <button onclick="getFlutter('flutter4')">Flutter4</button> <button onclick="getFlutter('flutter_counter')">Flutter Counter</button> <button onclick="getFlutter('flutter_roc')">ROC Flag</button> <button onclick="getFlutter('flutter_mine1')">踩地雷 1</button> <button onclick="getFlutter('flutter_mine2')">踩地雷 2</button> <button onclick="getFlutter('flutter_mine3')">踩地雷 3</button> <button onclick="getFlutter('flutter_mine4')">踩地雷 4</button> <button onclick="getFlutter('flutter_dropdown')">Dropdown</button> <button onclick="getFlutter('flutter_multiselect')">Multiselect</button> <button onclick="getFlutter('flutter_search')">Search</button> <button onclick="getFlutter('flutter_login')">Login</button> <button onclick="getFlutter('flutter_temp')">溫度轉換</button> <button onclick="getFlutter('flutter_ttt')">Tic-Tac-Toe</button> <button onclick="getFlutter('flutter_calculator')">Calculator</button> <button onclick="getFlutter('flutter_mouse1')">Mouse1</button> <button onclick="getFlutter('flutter_paint1')">Paint1</button></p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823224&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/temp1&amp;theme=dark" width="800"></iframe></p>
+<p><canvas height="200" id="canvas" width="300"></canvas></p>
+<script src="https://40823224.github.io/cp2019/downloads/dart_ex/roc_flag/roc_flag.js"></script>
+<p>亂數分組</p>
+<p>學員名單 URL: <input id="studListUrl" size="50" type="text" value="https://mde.tw/cp2019/downloads/2019fall_cp_1b_list.txt"/><br/> 每組人數: <input id="grpNum" size="3" type="text" value="10"/><br/> <input id="submit" type="submit" value="開始分組"/><br/> <textarea cols="80" id="output" rows="10"></textarea></p><br />W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
