--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,10 +1,11 @@
 <h1>首頁</h1>
 <p><img alt="" height="333" src="/images/16.jpg" width="500"/></p>
 <p>Youtube頻道</p>
-<h6><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></h6>
+<p><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></p>
 <p>個 人 倉 儲</p>
-<h6><a href="https://github.com/40823228/cp2019/commits/master">https://github.com/40823228/cp2019/commits/master</a> </h6>
-<h4></h4><h1>每周進度</h1>
+<p><a href="https://github.com/40823228/cp2019">https://github.com/40823228/cp2019</a></p>
+<h4></h4>
+<h1>每周進度</h1>
 <h2>w3 - Dartpad - 哈囉</h2>
 <p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
 <h2>W6 - for 迴圈程式 1~10</h2>
@@ -133,7 +134,8 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="getDart('cf')">cf</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/cf&amp;theme=dark" width="800"></iframe></p><h2>W12 - 任務</h2>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/cf&amp;theme=dark" width="800"></iframe></p>
+<h2>W12 - 任務</h2>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823228&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
@@ -250,3 +252,4 @@ document.getElementById("iframe").height = 600 ;
 <p>亂數分組</p>
 <p>學員名單 URL: <input id="studListUrl" size="50" type="text" value="https://mde.tw/cp2019/downloads/2019fall_cp_1b_list.txt"/><br/> 每組人數: <input id="grpNum" size="3" type="text" value="10"/><br/> <input id="submit" type="submit" value="開始分組"/><br/> <textarea cols="80" id="output" rows="10"></textarea></p>
 <script src="https://40823228.github.io/cp2019/downloads/dart_ex/random_grouping/random_grouping.js"></script>
+<h1>W17 - 查驗考試2</h1>
