--- a/content/W16 - 查驗考試.html
+++ b/content/W16 - 查驗考試.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a></li></ul><li><a href='W16 - 查驗考試.html'>W16 - 查驗考試</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a></li></ul><li><a href='W16 - 查驗考試.html'>W16 - 查驗考試</a><li><a href='W17 - 查驗考試2.html'>W17 - 查驗考試2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <br /><h1>W16 - 查驗考試</h1>
+    <div id="tipue_search_content">W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <a href='W17 - 查驗考試2.html'>Next</a> >> W17 - 查驗考試2<br /><h1>W16 - 查驗考試</h1>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823228&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
@@ -195,7 +195,8 @@ document.getElementById("iframe").height = 600 ;
 <script src="https://40823228.github.io/cp2019/downloads/dart_ex/roc_flag/roc_flag.js"></script>
 <p>亂數分組</p>
 <p>學員名單 URL: <input id="studListUrl" size="50" type="text" value="https://mde.tw/cp2019/downloads/2019fall_cp_1b_list.txt"/><br/> 每組人數: <input id="grpNum" size="3" type="text" value="10"/><br/> <input id="submit" type="submit" value="開始分組"/><br/> <textarea cols="80" id="output" rows="10"></textarea></p>
-<script src="https://40823228.github.io/cp2019/downloads/dart_ex/random_grouping/random_grouping.js"></script><br />W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> </div>
+<script src="https://40823228.github.io/cp2019/downloads/dart_ex/random_grouping/random_grouping.js"></script>
+<br />W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <a href='W17 - 查驗考試2.html'>Next</a> >> W17 - 查驗考試2</div>
         
     <!-- footer -->
       <div class="container">
