--- a/reveal/index.html
+++ b/reveal/index.html
@@ -71,6 +71,18 @@ Created by [KMOLab](http://lab.kmol.info/)
 </section>
 
 
+<section>
+<section data-markdown>
+    <script type="text/template">
+# 學習重點
+1.利用 Dartpad 學習基本 Dart 語法
+2.在 Dartpad 中導入 HTML 與 CSS, 利用 Dart 繪圖
+3.導入 Dart SDK, 在 編輯器中執行 Dart 程式
+4.學習利用SSH做推送 
+    </script>
+</section>
+
+
 			
 <section>
 <section data-markdown>
@@ -116,7 +128,7 @@ Created by [KMOLab](http://lab.kmol.info/)
 <section data-markdown>
     <script type="text/template">
 # 心得
-一開始接觸這門課的時候，完全不知道這門課要學習的是甚麼東西，可是經過老師這一學期的教導後，讓我了解到，原來程式在我們以後的社會上是不可或缺的，使我受益良多。
+一開始接觸這門課的時候，完全不知道這門課要學習的是甚麼東西，可是經過老師這一學期的教導後，讓我了解到很多的程式碼，雖然可能不是非常的精通，但是我會繼續努力學習，謝謝這門課讓知道原來程式在我們以後的社會上是不可或缺的，使我受益良多。
     </script>
 </section>
 
