--- a/reveal/index.html
+++ b/reveal/index.html
@@ -59,6 +59,7 @@ Created by [KMOLab](http://lab.kmol.info/)
     <script type="text/template">
 ## 計算機程式課程目錄
 
+* 學習重點
 * [重量轉換](https://40823228.github.io/cp2019/reveal/index.html#/2)
 * [溫度轉換](https://40823228.github.io/cp2019/reveal/index.html#/2/1)
 * [亂數分組](https://40823228.github.io/cp2019/reveal/index.html#/2/2)
@@ -82,6 +83,7 @@ Created by [KMOLab](http://lab.kmol.info/)
     </script>
 </section>
 
+</section>
 
 			
 <section>
